@@ -1,5 +1,6 @@
 Version 2.1.1-devel
 -------------------
+- Add getwhole.h header.
 
 
 Version 2.1.0 [29 Jun 2016]
